# kanidm-auth-plugin

./: .gitignore  CHANGELOG.md  Cargo.toml  deny.toml
.github/workflows/: release-plz.yml  release.yml  rust.yml
src/: main.rs
src/client/: mod.rs  spec.rs
