[package]
name = "kanidm-auth-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
http = "1.1.0"
rpassword = "7.3.1"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
toml = "0.8.19"
ureq = { version = "3.0.0-rc2", features = ["platform-verifier"] }
